fix(tile):set highest z-index on headline link

--- a/elements/rh-tile/rh-tile-lightdom.css
+++ b/elements/rh-tile/rh-tile-lightdom.css
@@ -13,10 +13,6 @@ rh-tile a:not([slot="image"], [slot="headline"]) {
   position: relative !important;
 }
 
-rh-tile [slot="headline"] {
-  z-index: 3;
-}
-
 rh-tile[aria-disabled="true"] a {
   color:
     var(
@@ -39,6 +35,12 @@ rh-tile a:is([slot="image"], [slot="headline"]):after {
   inset: 0;
   display: var(--rh-tile-link-after-display);
 }
+
+rh-tile [slot="headline"] a:after,
+rh-tile a[slot="headline"]:after {
+  z-index: 3;
+}
+
 
 rh-tile a[slot="image"] > :is(img, svg),
 rh-tile [slot="image"]:is(img, svg) {
